@@ -11,6 +11,7 @@
     "Cancel": "",
     "OK": "",
     "Record": "",
+    "Edit&Record": "",
     "Upload file": "",
     "Disable": "",
     "Create": "",
