@@ -11,6 +11,7 @@
     "Cancel": "Abbrechen",
     "OK": "OK",
     "Record": "Aufnehmen",
+    "Edit&Record": "Bearbeiten und Aufnehmen",
     "Upload file": "Datei hochladen",
     "Disable": "Ausschalten",
     "Create": "Erstellen",
