@@ -11,6 +11,7 @@
     "Cancel": "Отменить",
     "OK": "OK",
     "Record": "Записать",
+    "Edit&Record": "Редактировать и записать",
     "Upload file": "Загрузить файл",
     "Disable": "Отключить",
     "Create": "Создать",
