@@ -1,3 +1,5 @@
+2015-xx-xx 1.1.4 Record&Edit support for both EPG pages with no redirect
+
 2015-09-02 1.1.3 Proxy support for ffmpeg added
 
 2015-08-11 1.1.2 Internal retries for HTTP connection added 
